# advent-of-code

./: .gitattributes  .gitignore  flake.nix  justfile  readme.adoc  readme.md  solution
2022/day/01/: puzzle.md
2022/day/02/: puzzle.md
2022/day/03/: puzzle.md
2022/rust/: Cargo.toml
2023/nvim/: justfile
2023/rust/: .envrc  Cargo.toml  justfile
2023/rust/benches/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs
2023/rust/src/: day_01.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  lib.rs
2023/rust/src/day_02/: mod.rs  nom.rs
2024/rust/: Cargo.toml  justfile
2024/rust/benches/: day_01.rs  day_02.rs  day_03.rs
2024/rust/src/: day_01.rs  day_02.rs  day_03.rs  lib.rs
2024/rust/template/: append_to_lib
2024/rust/template/benches/: day_xx.rs
2024/rust/template/src/: day_xx.rs
common/rust/: Cargo.toml
common/rust/aoc/: Cargo.toml
common/rust/libaoc/: Cargo.toml
data/2023/01/: input  puzzle.md  test-01  test-02
data/2023/02/: input  puzzle.md  test-01
data/2023/03/: input  (+2 more)
nix/: args.nix  default.nix  devshell.nix  formatter.nix
nvim/: justfile
rust/: Cargo.toml  justfile
rust/aoc_2023/: Cargo.toml
rust/aoc_2023/benches/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs
rust/aoc_2023/src/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  lib.rs
rust/aoc_2023/src/day_02/: mod.rs
rust/src/: args.rs  main.rs
(+80 files in other folders)
