[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

[dependencies]
itertools = "0.13.0"
libaoc = { path = "../../common/rust/libaoc" }
nom = "7.1.3"
num = "0.4.3"
rayon = "1.10.0"
regex = "1.11.1"

[dev-dependencies]
divan = "0.1.17"
rstest = "0.23.0"
indoc = "2.0.5"

[[bench]]
name = "day_01"
harness = false
