[package]
name = "aoc_2024"
version = "0.1.0"
edition = "2021"

[dependencies]
libaoc = { path = "../../common/rust/libaoc" }
nom = "7.1.3"
regex = "1.11.1"
lazy_static = "1.5.0"

[dev-dependencies]
divan = "0.1.17"

[[bench]]
name = "day_01"
harness = false

[[bench]]
name = "day_02"
harness = false

[[bench]]
name = "day_03"
harness = false
