[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path = "../common"}
nom = "7.1.3"
regex = "1.10.2"

[dev-dependencies]
divan = "0.1.4"

[[bench]]
name = "day_01"
harness = false

[[bench]]
name = "day_02"
harness = false

[[bench]]
name = "day_03"
harness = false

