[package]
name = "aoc_2023"
version = "0.1.0"
edition = "2021"

[dependencies]
common = {path = "../common"}
itertools = "0.12.0"
nom = "7.1.3"
rayon = "1.8.0"
regex = "1.10.2"

[dev-dependencies]
divan = "0.1.4"

[[bench]]
name = "day_01"
harness = false

[[bench]]
name = "day_02"
harness = false

[[bench]]
name = "day_03"
harness = false

[[bench]]
name = "day_04"
harness = false

[[bench]]
name = "day_06"
harness = false

